Closed
Bug 477294
Opened 12 years ago
Closed 12 years ago
"ASSERTION: bits don't correspond to style change reason" with MathML
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: dbaron)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, regression, testcase)
Attachments
(2 files)
389 bytes,
application/xhtml+xml
|
Details | |
12.56 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
This assertion was added in bug 363247 and I'm hitting it a lot. ###!!! ASSERTION: bits don't correspond to style change reason: 'aIntrinsicDirty != eStyleChange || aBitToAdd == NS_FRAME_IS_DIRTY', file /Users/jruderman/central/layout/base/nsPresShell.cpp, line 3126
![]() |
||
Comment 1•12 years ago
|
||
It's an eStyleChange with NS_FRAME_HAS_DIRTY_CHILDREN, yeah. The caller is nsMathMLContainerFrame::ReLayoutChildren (which always does eStyleChange) and its caller is nsMathMLmathBlockFrame::InsertFrames.
Assignee | ||
Comment 2•12 years ago
|
||
Given that this function is marking ancestors with NS_FRAME_IS_DIRTY, it seems like it's effectively saying the frame is dirty.
![]() |
||
Comment 3•12 years ago
|
||
It's not marking ancestors of the frame it passes to FrameNeedsReflow with NS_FRAME_IS_DIRTY, though.
Assignee | ||
Updated•12 years ago
|
Assignee: nobody → dbaron
Status: NEW → ASSIGNED
Assignee | ||
Comment 4•12 years ago
|
||
Er, right... I'd looked a bit more since comment 2... but the difference seems incredibly minor, and I don't see any reason why an operation on a child frame should cause a frame many frames up the tree to get NS_FRAME_HAS_DIRTY_CHILDREN rather than NS_FRAME_IS_DIRTY. If we need to do this much damage, we may as well be consistent about it.
![]() |
||
Comment 5•12 years ago
|
||
I could live with that, I guess.
Assignee | ||
Comment 6•12 years ago
|
||
Attachment #361411 -
Flags: superreview?(bzbarsky)
Attachment #361411 -
Flags: review?(bzbarsky)
Assignee | ||
Comment 7•12 years ago
|
||
(Full reftests pass, although I don't know how meaningful that is for MathML dynamic change handling.)
![]() |
||
Comment 8•12 years ago
|
||
Comment on attachment 361411 [details] [diff] [review] patch I think I'd be fine with a followup bug to remove those XXX comments and dirty bit sets they're about.
Attachment #361411 -
Flags: superreview?(bzbarsky)
Attachment #361411 -
Flags: superreview+
Attachment #361411 -
Flags: review?(bzbarsky)
Attachment #361411 -
Flags: review+
Assignee | ||
Comment 9•12 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/81bf5017af71
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 10•12 years ago
|
||
Filed bug 477915 to follow up.
You need to log in
before you can comment on or make changes to this bug.
Description
•