Remove the aBits parameter from ReLayoutChildren, given that what it does blows away the distinction between NS_FRAME_IS_DIRTY and NS_FRAME_HAS_DIRTY_CHILDREN.  (Bug 477294)  r+sr=bzbarsky